# diplom

./: pyproject.toml  readme.md  readme_2.md  ДИПЛОМНАЯ РАБОТА.odt
django_app/: db.sqlite3
django_app/django_app/: settings.py  urls.py
django_app/my_booking/: manage.py
django_app/my_booking/my_booking/: asgi.py  settings.py  urls.py  wsgi.py
django_app/rent_eq/: apps.py  models.py  serializers.py  urls.py  views.py
django_app/rent_eq/migrations/: 0001_initial.py  0002_remove_equipment_available.py
fastapi_app/: alembic.ini  fa_rent_db.sqlite3  main.py  models.py
fastapi_app/alembic/: env.py
fastapi_app/alembic/versions/: 2024_12_24_1355-0dcf0b74af6c_initial_migrations.py  2024_12_24_2352-000535af531e_initial_migrations.py
fastapi_app/api/: __init__.py  equipment.py  rentals.py  user.py
fastapi_app/api/crud/: equipment_cruds.py  rental_cruds.py  usercruds.py
fastapi_app/core/: __init__.py  base.py  config.py  db_help.py
fastapi_app/schemas/: equipment.py  rental.py  user.py
flask_app/: alembic.ini  app.py  rentals.db
flask_app/alembic/: env.py
flask_app/alembic/versions/: 2025_01_07_0332-bf4f4e6f60f6_initial_migrate.py
flask_app/cruds/: __init__.py  equipment_crud.py  rental_crud.py  user_crud.py
flask_app/models/: equipment_model.py  rental_model.py  user_model.py
flask_app/resources/: equipment_resources.py  rental_resource.py  user_resource.py
flask_app/schemas/: equipment_schema.py  rental_schema.py  user_schema.py
