[tool.poetry]
name = "rest-full-api"
version = "0.1.0"
description = "Thesis on designing restfull api using django-restframework, flusk and Fastapi"
authors = ["Alexandr Shevchenko <djpestro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
flask = "^3.1.0"
flask-restful = "^0.3.10"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
